# waymouse

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
docs/: index.md  mango-shake-runtime.md  roadmap.md
docs/features/: 01-pointer-manager.md  02-shake-to-find.md  03-basic-mouse-config.md  04-device-separation.md  FEATURE-TEMPLATE.md  index.md
docs/operator-changes/: 2026-06-12-shake-to-find-implementation.md
protocols/: wlr-layer-shell-unstable-v1.xml
rules/: architecture.md  backend-guide.md  coderules.md
src/: main.cpp
src/backends/: backend.hpp  cursor_backend.hpp  env_cursor_backend.cpp  env_cursor_backend.hpp  libinput_backend.cpp  libinput_backend.hpp  mango_backend.cpp  mango_backend.hpp  niri_backend.cpp  niri_backend.hpp  niri_cursor_backend.cpp  niri_cursor_backend.hpp  wlr_cursor_backend.cpp  wlr_cursor_backend.hpp
src/core/: compositor_detector.cpp  compositor_detector.hpp  config_manager.cpp  config_manager.hpp  config_watcher.cpp  config_watcher.hpp  device_manager.cpp  device_manager.hpp  mango_ipc_client.cpp  mango_ipc_client.hpp  pointer_config.hpp  pointer_manager.cpp  pointer_manager.hpp  raw_input_monitor.cpp  raw_input_monitor.hpp  runtime_lock.cpp  runtime_lock.hpp  runtime_status.cpp  runtime_status.hpp  shake_config.hpp  shake_detector.cpp  shake_detector.hpp  shake_manager.cpp  shake_manager.hpp  shake_session_runtime.cpp  shake_session_runtime.hpp  theme_detector.cpp  theme_detector.hpp
src/gui/: device_panel.cpp  device_panel.hpp  main_window.cpp  main_window.hpp  pointer_panel.cpp  pointer_panel.hpp  shake_overlay.cpp  shake_overlay.hpp  shake_panel.cpp  shake_panel.hpp
src/wayland/: layer_shell_surface.cpp  layer_shell_surface.hpp  wlr-layer-shell-unstable-v1-client-protocol.c  wlr-layer-shell-unstable-v1-client-protocol.h
tests/: CMakeLists.txt  stub_test.cpp  test_config_manager.cpp  test_mango_ipc_client.cpp  test_pointer_manager.cpp  test_pointer_panel.cpp  test_runtime_status.cpp  test_shake_detector.cpp  test_shake_panel.cpp  test_shake_session_runtime.cpp  test_theme_detector.cpp
